# tree-sitter-kpl

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kpl/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKplTests/: TreeSitterKplTests.swift
queries/: highlights.scm  outline.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: behaviors.txt  classes.txt  comments.txt  declarations.txt  expressions.txt  functions.txt  interfaces.txt  literals.txt  smoke.txt  statements.txt  types.txt
